# AlmostIdle

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
AlmostIdle/: AlmostIdle.cpp  AlmostIdle.h  CMakeLists.txt  MapLoader.cpp  MapLoader.h  constants.h  room.cpp  room.h
AlmostIdle/Scene/: Components.h  DebugSystem.cpp  DebugSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  Scene.cpp  Scene.h
dependencies/: CMakeLists.txt
dependencies/entt/: CMakeLists.txt
